--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,71 @@
+---
+import '@fontsource-variable/saira/wdth-italic.css';
+import "../styles/global.css";
+import GitHub from '../components/icons/GitHub.astro';
+import Mail from '../components/icons/Mail.astro';
+import Linkedin from '../components/icons/Linkedin.astro';
+---
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="en" class="bg-amber-50">
+ 
+  <head>
+    <meta charset="UTF-8" />
+    <title>Daniel Rodríguez</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  </head>
+
+  <div class="flex justify-center sticky top-0 z-50 group">
+    <header class="w-full max-w-xl rounded-md px-6 text-lg border-slate-900 border-y-2 shadow-sm text-amber-50 backdrop-blur-md transform  duration-300 group-hover:translate-y-5 group-hover:bg-slate-800 transition -translate-y-5">
+      <nav class="flex justify-center items-center">
+        <ul class="flex gap-6 text-base font-medium">
+          <li><a href="#about" class="hover:underline">Sobre mí</a></li>
+          <li><a href="#projects" class="hover:underline">Proyectos</a></li>
+          <li><a href="#experience" class="hover:underline">Experiencia</a></li>
+          <li><a href="#extra" class="hover:underline">Extras</a></li>
+          <li><a href="#contact" class="hover:underline">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  
+  
+
+  <body class="relative min-h-screen w-full bg-amber-50 text-slate-900">
+    <div class=" inset-0 -z-50 fixed
+      bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)]
+      bg-[size:4rem_3rem]
+      [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_110%)]
+      [-webkit-mask-image:radial-gradient(ellipse_70%_50%_at_50%_0%,#000_20%,transparent_110%)]">
+    </div>
+		
+	
+    <slot />
+  </body>
+  <footer class="mt-16 bg-slate-900 text-amber-50 text-center text-sm py-6">
+    <p> 2025 Daniel Rodríguez.</p>
+    <div class="mt-2 flex justify-center gap-4 text-amber-50">
+      <a href="https://github.com/DanielRoCa01" target="_blank" class="hover:scale-110 transition-colors">
+        <GitHub class="size-7"/>
+      </a>
+      <a href="https://www.linkedin.com/in/daniel-rodr%C3%ADguez-camacho-1143b82a3/" target="_blank" class="hover:scale-110 transition-colors"><Linkedin class="size-7"/></a>
+      <a href="mailto:danielrodriguezcamacho21@gmail.com" class="hover:scale-110 transition-colors"><Mail class="size-7"/></a>
+    </div>
+  </footer>
+  
 </html>
 
 <style>
+	<div class="relative h-full w-full bg-white"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_110%)]"></div></div>
 	html,
 	body {
+
+  		
+
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+	html{
+		font-family: 'Saira Variable', sans-serif;
 	}
 </style>
