pre add content

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ import CV from '../components/icons/CV.astro';
   <head>
     <meta charset="UTF-8" />
     <title>Daniel Rodríguez</title>
+    <link rel="icon" href="/logo.png" type="image/png" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
 
