fix(networks)change cv link

--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -46,7 +46,7 @@ import Typewriter from "./animations/Typewriter";
           <Mail class="size-6  group-hover:text-amber-50  active:text-amber-50 transition-all duration-500" />
         </div>
       </a>
-      <a href="https://drive.google.com/file/d/10Ry1UvJvxldjcoeBOVHrznR8u28b73_-/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+      <a href="https://drive.google.com/file/d/1LfaWXfTGHHhK3hweVnLg-7Q5Vgvw624G/view" target="_blank" rel="noopener noreferrer">
         <div class=" flex border-y-2  py-3 px-2  rounded-md hover:bg-slate-900 active:bg-slate-900 group transition-all duration-500">
               <CV class="size-7  group-hover:text-amber-50 active:text-amber-50 transition-all duration-500"/>
             </div>
