--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ import CV from '../components/icons/CV.astro';
       </a>
       <a href="https://www.linkedin.com/in/daniel-rodr%C3%ADguez-camacho-1143b82a3/" target="_blank" class="hover:scale-110 transition-colors"><Linkedin class="size-7"/></a>
       <a href="mailto:danielrodriguezcamacho21@gmail.com" class="hover:scale-110 transition-colors"><Mail class="size-7"/></a>
-      <a href="https://drive.google.com/file/d/10Ry1UvJvxldjcoeBOVHrznR8u28b73_-/view?usp=sharing" class="hover:scale-110 transition-colors"><CV class="size-7"/></a>
+      <a href="https://drive.google.com/file/d/1LfaWXfTGHHhK3hweVnLg-7Q5Vgvw624G/view" class="hover:scale-110 transition-colors"><CV class="size-7"/></a>
     </div>
   </footer>
   
